<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:weightSum="1">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="12dp"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/textView"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal|top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:id="@+id/textView2"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="15dp" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_gravity="center" />

            <Button
                android:layout_width="280dp"
                android:layout_height="38dp"
                android:text="@string/login_button"
                android:id="@+id/button2"
                android:background="#00bbd3"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/forgot_password"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/create_account"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />
    </LinearLayout>



</LinearLayout>
